--- a/package.json
+++ b/package.json
@@ -3,17 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "echo \"TODO: implement build pipeline\"",
+    "dev": "netlify dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "manifest": "node pipelines/run-manifest.mjs",
     "precommit:secrets": "echo \"Run detect-secrets before committing\" && exit 0"
   },
   "dependencies": {
-    "@netlify/functions": "^1.6.0",
+    "@netlify/functions": "^2.6.0",
     "aws-sdk": "^2.1490.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "js-yaml": "^4.1.0"
   },
   "devDependencies": {
     "@types/aws-sdk": "^2.7.0",
-    "typescript": "^5.3.0"
+    "@types/node": "^20.11.0",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "@vitejs/plugin-react": "^4.2.1",
+    "netlify-cli": "^17.15.0",
+    "typescript": "^5.3.0",
+    "vite": "^5.0.12"
   }
 }
