--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "precommit:secrets": "echo \"Run detect-secrets before committing\" && exit 0"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.943.0",
+    "@aws-sdk/s3-request-presigner": "^3.943.0",
     "@netlify/functions": "^2.0.0",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/exporter-trace-otlp-proto": "^0.208.0",
