--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "lucide-react": "^0.292.0",
     "openai": "^4.104.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "yaml": "^2.3.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
