feat: Add comprehensive .env.example for v2.0.0 pipeline

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,74 @@
 # SirTrav A2A Studio - Environment Variables
 # Copy this file to .env and fill in your values
+# v2.0.0 - Real Video Production Pipeline
 
+# =============================================================================
+# CORE AI SERVICES
+# =============================================================================
+
+# OpenAI - Director & Writer Agents (GPT-4 Vision)
 OPENAI_API_KEY=your-openai-api-key-here
+
+# ElevenLabs - Voice Agent (Text-to-Speech)
 ELEVENLABS_API_KEY=your-elevenlabs-key-here
+
+# Suno - Composer Agent (Music Generation)
 SUNO_API_KEY=your-suno-key-here
+SUNO_API_URL=https://api.suno.ai/v1
+
+# =============================================================================
+# VIDEO PROCESSING
+# =============================================================================
+
+# FFmpeg Service - Editor Agent (Video Compilation)
+# Options: AWS Lambda, Cloudinary, Mux, or custom service
+FFMPEG_SERVICE_URL=
+FFMPEG_API_KEY=
+
+# =============================================================================
+# SOCIAL MEDIA PUBLISHING
+# =============================================================================
+
+# YouTube Data API v3
+YOUTUBE_CLIENT_ID=
+YOUTUBE_CLIENT_SECRET=
+YOUTUBE_REFRESH_TOKEN=
+
+# TikTok Content Posting API
+TIKTOK_CLIENT_KEY=
+TIKTOK_CLIENT_SECRET=
+TIKTOK_ACCESS_TOKEN=
+TIKTOK_REFRESH_TOKEN=
+
+# Instagram Graph API (requires Facebook Business)
+INSTAGRAM_ACCESS_TOKEN=
+INSTAGRAM_BUSINESS_ID=
+
+# =============================================================================
+# STORAGE & UTILITIES
+# =============================================================================
+
+# Netlify Blobs (auto-configured on Netlify)
+# No manual config needed - uses NETLIFY_BLOBS_CONTEXT
+
+# AWS S3 (alternative storage)
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=us-east-1
+S3_BUCKET_NAME=
+
+# Bitly (short URLs)
+BITLY_ACCESS_TOKEN=
+
+# Share Link Security
+SHARE_SECRET=your-random-secret-here
+
+# =============================================================================
+# DEVELOPMENT
+# =============================================================================
+
+# Use test video instead of real pipeline
+USE_TEST_VIDEO=true
+
+# Local vault path for development
 VAULT_PATH=/path/to/your/vault
