chore: Fix .gitignore to exclude node_modules

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,37 @@
+# Dependencies
+node_modules/
+.pnp
+.pnp.js
 
+# Build outputs
+dist/
+build/
+.next/
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# Local Netlify folder
+.netlify/
+
+# IDE
+.vscode/
+.idea/
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+npm-debug.log*
+
+# Test coverage
+coverage/
+
+# Byterover rules
 .clinerules/byterover-rules.md
 .kilocode/rules/byterover-rules.md
 .roo/rules/byterover-rules.md
@@ -7,10 +40,3 @@
 .kiro/steering/byterover-rules.md
 .qoder/rules/byterover-rules.md
 .augment/rules/byterover-rules.md
-# Environment files
-.env
-.env.local
-.env.*.local
-
-# Local Netlify folder
-.netlify
