docs: Mark ElevenLabs and Suno as REQUIRED for real video production

--- a/.env.example
+++ b/.env.example
@@ -3,16 +3,16 @@
 # v2.0.0 - Real Video Production Pipeline
 
 # =============================================================================
-# CORE AI SERVICES
+# CORE AI SERVICES (ALL THREE ARE REQUIRED FOR REAL VIDEO PRODUCTION)
 # =============================================================================
 
-# OpenAI - Director & Writer Agents (GPT-4 Vision)
+# 🔴 REQUIRED - OpenAI - Director & Writer Agents (GPT-4 Vision)
 OPENAI_API_KEY=your-openai-api-key-here
 
-# ElevenLabs - Voice Agent (Text-to-Speech)
+# 🔴 REQUIRED - ElevenLabs - Voice Agent (AI Narration)
 ELEVENLABS_API_KEY=your-elevenlabs-key-here
 
-# Suno - Composer Agent (Music Generation)
+# 🔴 REQUIRED - Suno - Composer Agent (AI Music Generation)
 SUNO_API_KEY=your-suno-key-here
 SUNO_API_URL=https://api.suno.ai/v1
 
