chore(netlify): payload pointers, modern blob-get, ignore eval outputs

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@ SirJames-A2A-Studio/
 .kiro/steering/byterover-rules.md
 .qoder/rules/byterover-rules.md
 .augment/rules/byterover-rules.md
+.vite/
+evaluation_results.json
