feat: Add attribution/evaluation functions and wire CreativeHub to start-pipeline
- generate-attribution.ts: writes credits to /tmp/<project>/credits.json with runId and cost aggregation
- submit-evaluation.ts: records feedback into /tmp/vault/memory_index.json (last 100 entries)
- CreativeHub.tsx: wired to start-pipeline, stores runId, adds feedback buttons
- CreativeHub.css: feedback button styles
- App.jsx: accepts runId from CreativeHub
- Chaos Monkey gated to dev only

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,12 @@ tmp/
 # OS files
 .DS_Store
 Thumbs.db
+
+# A2A Studio Artifacts (Do not commit generated videos)
+public/run-*/
+public/week*/
+data/sirtrav-progress/
+
+# Keep the placeholders but ignore real media
+content/intake/*
+!content/intake/.gitkeep
