--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "@netlify/functions": "^2.6.0",
     "aws-sdk": "^2.1490.0",
+    "clsx": "^2.1.1",
+    "js-yaml": "^4.1.0",
+    "lucide-react": "^0.555.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "js-yaml": "^4.1.0"
+    "recharts": "^3.5.1",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@types/aws-sdk": "^2.7.0",
@@ -22,7 +26,10 @@
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.22",
     "netlify-cli": "^17.15.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17",
     "typescript": "^5.3.0",
     "vite": "^5.0.12"
   }
