--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.943.0",
     "@aws-sdk/s3-request-presigner": "^3.943.0",
+    "@google/generative-ai": "^0.24.1",
     "@netlify/blobs": "^8.2.0",
     "@netlify/functions": "^2.0.0",
     "@opentelemetry/api": "^1.9.0",
