--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@opentelemetry/instrumentation": "^0.208.0",
     "@opentelemetry/resources": "^2.2.0",
     "@opentelemetry/sdk-trace-node": "^2.2.0",
+    "@remotion/cli": "^4.0.409",
     "@traceloop/instrumentation-openai": "^0.22.0",
     "fluent-ffmpeg": "^2.1.3",
     "js-yaml": "^4.1.1",
@@ -40,6 +41,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "remotion": "^4.0.409",
     "yaml": "^2.3.4"
   },
   "devDependencies": {
