--- a/package.json
+++ b/package.json
@@ -34,9 +34,12 @@
     "@opentelemetry/sdk-trace-node": "^2.2.0",
     "@remotion/cli": "^4.0.409",
     "@traceloop/instrumentation-openai": "^0.22.0",
+    "@types/crypto-js": "^4.2.2",
+    "crypto-js": "^4.2.0",
     "fluent-ffmpeg": "^2.1.3",
     "js-yaml": "^4.1.1",
     "lucide-react": "^0.292.0",
+    "oauth-1.0a": "^2.2.6",
     "openai": "^4.104.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
