--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@remotion/cli": "^4.0.409",
     "@traceloop/instrumentation-openai": "^0.22.0",
     "@types/crypto-js": "^4.2.2",
+    "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
     "fluent-ffmpeg": "^2.1.3",
     "js-yaml": "^4.1.1",
@@ -45,6 +46,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "remotion": "^4.0.409",
+    "twitter-api-v2": "^1.29.0",
     "yaml": "^2.3.4"
   },
   "devDependencies": {
