--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-  command = "npm install --include=dev && npm run build"
-  publish = "dist"
+  command = "npm install --include=dev && npm run build && cp -r dist/* landing/ 2>/dev/null || xcopy /E /I /Y dist landing"
+  publish = "landing"
   functions = "netlify/functions"
 
 [build.environment]
