--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-  command = "npm install --include=dev && npm run build"
-  publish = "landing"
+  command = "npm ci && npm run build"
+  publish = "dist"
   functions = "netlify/functions"
 
 [build.environment]
