feat(claude-code): No Fake Success + payload validation on all 5 publishers + healthcheck improvements
Publishers (publish-x, publish-linkedin, publish-youtube, publish-instagram, publish-tiktok):
- All return {success: false, disabled: true} when API keys missing (No Fake Success pattern)
- Added validateXPayload, validateLinkedInPayload, validateYouTubePayload
- Consistent error responses across all platforms

healthcheck.ts: Better error messages listing which social keys are missing
.env.example: Added TWITTER_* and LINKEDIN_* templates
.claude/settings.local.json: Updated Claude Code agent config

--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,22 @@ FFMPEG_API_KEY=
 # SOCIAL MEDIA PUBLISHING
 # =============================================================================
 
+# X/Twitter OAuth 1.0a (User Context - required for posting)
+# Get from: https://developer.x.com/en/portal/dashboard
+# App must have "Read and Write" permissions
+TWITTER_API_KEY=
+TWITTER_API_SECRET=
+TWITTER_ACCESS_TOKEN=
+TWITTER_ACCESS_SECRET=
+
+# LinkedIn Marketing API v2
+# Get from: https://www.linkedin.com/developers/apps
+# Request "Share on LinkedIn" product for w_member_social scope
+LINKEDIN_CLIENT_ID=
+LINKEDIN_CLIENT_SECRET=
+LINKEDIN_ACCESS_TOKEN=
+LINKEDIN_PERSON_URN=urn:li:person:YOUR_MEMBER_ID
+
 # YouTube Data API v3
 YOUTUBE_CLIENT_ID=
 YOUTUBE_CLIENT_SECRET=
