--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "yaml": "^2.3.4"
   },
   "devDependencies": {
+    "@netlify/vite-plugin": "^2.9.0",
     "@types/fluent-ffmpeg": "^2.1.28",
     "@types/js-yaml": "^4.0.9",
     "@types/react": "^18.2.37",
