feat(linkedin): OAuth callback function + privacy page + setup helper
- auth-linkedin-callback.ts: Netlify function that handles the full
  OAuth flow in-browser (no terminal commands needed). User clicks
  "Authorize with LinkedIn", function exchanges code, fetches Person
  URN, and displays all env vars with copy buttons.
- public/privacy/index.html: Privacy policy page required by LinkedIn
  Dev Portal (https://sirtrav-a2a-studio.netlify.app/privacy)
- netlify.toml: Redirect /auth/linkedin/callback to the new function
- scripts/linkedin-setup-helper.mjs: CLI alternative for setup
- justfile: linkedin-setup + linkedin-auth-url recipes
- docs/LINKEDIN_SETUP.md: Updated /v2/me to /v2/userinfo, added
  quick setup section

--- a/netlify.toml
+++ b/netlify.toml
@@ -32,6 +32,12 @@
 [functions."run-pipeline-background"]
   timeout = 900
 
+# LinkedIn OAuth callback → serverless function
+[[redirects]]
+  from = "/auth/linkedin/callback"
+  to = "/.netlify/functions/auth-linkedin-callback"
+  status = 200
+
 # SPA fallback redirect
 [[redirects]]
   from = "/*"
