--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,11 @@
 [build]
-  command = "npm install --include=dev && npm run build"
+  command = "npm run build"
   publish = "dist"
   functions = "netlify/functions"
 
 [build.environment]
   NODE_VERSION = "22"
+  NPM_FLAGS = "--include=dev"
 
 [dev]
   command = "npx vite"
